# voxel-project

./: .gitignore  Cargo.toml  README.md  build_wasm.bat  index.html
src/: main.rs  octree.rs  orbit_camera.rs
wasm/: index.html
wasm/webassembly/: voxels.d.ts  voxels.js  voxels_bg.wasm.d.ts  wasm_example.d.ts  wasm_example.js  wasm_example_bg.wasm.d.ts
