[package]
name = "bevy-voxels"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
# bevy-inspector-egui = "0.27.0"
# bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
bevy_screen_diagnostics = "0.6.0"
console_log = "1.0.0"
log = "0.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = "debuginfo"